# OpenCV_Task

./: CMakeLists.txt  README.md  frame_operations.cpp  frame_operations.h  main.cpp
Camera/: frame_operations.cpp  web_cam.cpp  web_cam.h
Resources/: meow
